kind/docker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debug-subdomain
spec:
  selector:
    name: debug
  clusterIP: None
  ports:
  - name: foo # name is not required for single-port Services
    port: 1234
